--- a/app/globals.css
+++ b/app/globals.css
@@ -1,22 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.main-container {
-  display: flex;
-  align-items: start;
+body {
+  font-family: "Instrument Sans", sans-serif;
+  font-weight: 500;
+
 }
 
-.header {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  background-color: #F9FAFC;
-  height: 50px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  z-index: -1;
+a, ul {
+  text-decoration: none;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .div-content {
@@ -26,11 +29,76 @@
 }
 
 .topbar {
-  width: 10%;
+  width: 15%;
   display: flex;
   flex-direction: column;
   background-color: #F9FAFC;
   height: 100vh;
+  padding: 10px;
+  padding-top: 50px;
 
-  z-index: 0;
+}
+
+
+
+.sub_container {
+  display: flex;
+  gap: 10px;
+}
+
+
+
+.topbar>.link {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 25px;
+  text-align: start;
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+
+}
+
+/* Dashboard */
+.dashboard_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  transform: translate(80%, 0%);
+}
+
+.group_card {
+  display: flex;
+  flex-direction: column;
+}
+
+.single_card {
+  width: 400px;
+  height: 80px;
+  background-color: #F9FAFC;
+  border: 1px solid #EEEEEE;
+  margin-bottom: 5px;
+}
+
+.third_div {
+  width: 400px;
+  height: 80px;
+  background-color: #e9e9fe;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.ant-card .ant-card-body {
+  padding: 5px;
+  border-radius: 0;
+}
+
+.logo {
+  width: 20px;
+  height: 20px;
 }
