--- a/Styles/Header.module.css
+++ b/Styles/Header.module.css
@@ -30,21 +30,23 @@
 
 .button_div {
     text-align: center;
+    /* display: flex;
+    align-items: center; */
 }
 
-.collectBtn {
+.collect_btn {
     display: flex;
     align-items: center;
     gap: 5px;
-
     color: #ffff;
     padding: 8px, 10px, 8px, 10px;
     border-radius: 5px;
     cursor: pointer;
     font-family: "Instrument Sans", sans-serif;
     font-weight: 300;
-    font-style: normal;
+
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
 }
 
 /* 
@@ -62,5 +64,5 @@
 
 .topbar div.active img {
     fill: blue;
-    /* Assuming SVG fill color 
+ Assuming SVG fill color 
 } */
