--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
+/* @import "antd/dist/antd.css"; */
 
 *, *::after, *::before {
   margin: 0;
