--- a/Styles/Dashboard.module.scss
+++ b/Styles/Dashboard.module.scss
@@ -14,6 +14,7 @@
 }
 .from {
   padding: 5px 10px;
+  width: 20%;
 }
 .groupCard {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
@@ -43,11 +44,28 @@
 }
 
 .thirdDiv {
-  width: 400px;
-  height: 80px;
+  margin-top: 10px;
+  // width: 400px;
+  height: 100%;
   background-color: #e9e9fe;
   display: flex;
+  padding: 10px;
   justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  gap: 10px;
+  // align-items: center;
+  .card_div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    span {
+      font-size: 16px;
+      font-weight: 500;
+      font-family: "Instrument Sans", sans-serif;
+    }
+  }
 }
 
 .logo {
@@ -120,4 +138,32 @@
   cursor: pointer;
   margin-bottom: 15px;
   box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+}
+
+.calucation_div {
+  width: 100%;
+  height: 100%;
+  .reciept_btn_div {
+    display: flex;
+    justify-content: flex-end;
+
+    .receipt_btn {
+      background-color: #e9e9fe;
+      color: #000;
+      font-weight: 400;
+    }
+    .receipt_btn:hover {
+      background-color: #e9e9fe;
+      color: #000;
+    }
+  }
+  .brige_btn_div {
+    width: 100%;
+    margin-top: 10px; /* Add margin if needed */
+    .bridge_btn {
+      width: 100%;
+      height: 40px;
+      font-weight: 500;
+    }
+  }
 }
