--- a/app/globals.css
+++ b/app/globals.css
@@ -5,17 +5,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
 
-body {
-  font-family: "Instrument Sans", sans-serif;
-  font-weight: 500;
 
 
 }
 
 a, ul {
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6, span {
+  font-family: "Instrument Sans", sans-serif;
 }
 
 .main-container {
@@ -76,20 +76,31 @@ a, ul {
   /* border-left: 1px solid #d9d9d9 !important; */
   background: #ffffff;
   /* border-radius: 2px; */
-  border: none;
+  border: none !important;
   text-align: center;
 }
 
 
-.ant-select-outlined:not(.ant-select-disabled):hover .ant-select-selector,
-.ant-select-outlined:not(.ant-select-disabled):focus .ant-select-selector {
+.ant-select-outlined:hover .ant-select-selector {
   box-shadow: none !important;
-  outline: none;
-  border: none;
+  outline: none !important;
+  border: none !important;
   border-color: transparent !important;
   text-align: center;
 }
 
+.ant-select-outlined:focus .ant-select-selector {
+  box-shadow: none !important;
+  outline: none !important;
+  border: none !important;
+  border-color: transparent !important;
+  text-align: center;
+}
+
+.ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector {
+  border: transparent;
+  background: #ffffff;
+}
 
 .ant-select-selection-item {
   display: flex;
